added async await to get put post delete request project

--- a/index_1.html
+++ b/index_1.html
@@ -12,6 +12,9 @@
 
 </body>
 
-<script src="app_1.js"></script>
+<script src="ezhttp3.js"></script>
+<script src="app_3.js"></script>
+
+<!-- <script src="app_1.js"></script> -->
 
 </html>
